# png_wrapper.h

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/pngw-Example/: main.c
include/: png_wrapper.h
scripts/: build_example_solution.sh
